<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/parentSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <FrameLayout
	    android:id="@+id/sep0"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/black"
	    android:layout_centerHorizontal="true">
    </FrameLayout>
    
    <com.google.ads.AdView android:id="@+id/adView2"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         ads:adUnitId="ca-app-pub-7393689937893463/8371819837"
                         ads:adSize="BANNER"
                         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                         android:layout_below="@id/sep0"
                         ads:loadAdOnCreate="true"/>
    
    <TextView 
        android:id="@+id/headerSearchActivity"
        android:layout_height="48dp"
        android:layout_width="fill_parent"
        android:text="@string/searchHeader"
        android:textColor="@color/black"
        android:background="@color/babyBlue"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/adView2"/>
    
    <FrameLayout
	    android:id="@+id/sep1"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_below="@id/headerSearchActivity"
	    android:background="@color/black"
	    android:layout_centerHorizontal="true">
    </FrameLayout>
    
    <RelativeLayout 
        android:id="@+id/searchLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/sep1"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_centerHorizontal="true">
        
        <TextView 
            android:id="@+id/searchMovieText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/searchMovieText"
            android:layout_centerHorizontal="true"/>
        <EditText 
            android:id="@+id/searchMovieBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchMovieText"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:layout_centerHorizontal="true"/>
        <FrameLayout
	        android:id="@+id/bottomEditText"
	        android:layout_width="fill_parent"
	        android:layout_height="0.5dp"
	        android:layout_below="@id/searchMovieBox"
	        android:background="@color/black"
	        android:layout_marginBottom="8dp"
	        android:layout_centerHorizontal="true">
	    </FrameLayout>
	    <ImageButton 
		    android:id="@+id/searchButton"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:src="@drawable/search"
		    android:background="@color/white"
		    android:layout_below="@id/bottomEditText"
	        android:layout_centerHorizontal="true"
	        android:contentDescription="@string/searchButtonDesc"/>
	    
    </RelativeLayout>
    
    <FrameLayout
	    android:id="@+id/sep2"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_below="@id/searchLayout"
	    android:background="@color/black"
	    android:layout_centerHorizontal="true">
    </FrameLayout>
    
    <TextView 
        android:id="@+id/resultHeader"
        android:layout_height="32dp"
        android:layout_width="fill_parent"
        android:text="@string/resultHeader"
        android:textColor="@color/black"
        android:background="@color/white"
        android:gravity="center"
        android:layout_below="@id/sep2"
        android:layout_marginTop="8dp"/>
    
    <ScrollView 
        android:id="@+id/scrollableView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultHeader"
        android:background="@color/white"
        android:layout_above="@+id/swipeRightBox">
	    <LinearLayout
	        android:id="@+id/resultMovieParent"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="8dp"
	        android:paddingLeft="8dp"
	        android:paddingRight="8dp" >
	    </LinearLayout>
    </ScrollView>
    
    
    <FrameLayout
	    android:id="@+id/sep3"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_above="@id/swipeRightBox"
	    android:background="@color/black"
	    android:layout_centerHorizontal="true">
    </FrameLayout>
    
    <TextView 
	   	android:id="@+id/swipeRightBox"
	    android:layout_width="fill_parent"
	    android:layout_height="48dp"
	    android:textStyle="bold"
	    android:textColor="@color/black"
	    android:background="@color/babyBlue"
	    android:text="@string/swipeRightBox"
	    android:gravity="center"
	    android:layout_alignParentBottom="true"/>

</RelativeLayout>
